--- a/index.html
+++ b/index.html
@@ -15,12 +15,19 @@
   <!-- 引入 jQuery -->
   <!--<script src="https://code.jquery.com/jquery-3.6.0.min.js" type="application/javascript"></script>-->
   <!-- 字节静态资源CDN -->
-  <link href="//lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/element-ui/2.13.0/theme-chalk/index.css" type="text/css" rel="stylesheet" />
+<!--   <link href="//lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/element-ui/2.13.0/theme-chalk/index.css" type="text/css" rel="stylesheet" />
   <script src="//lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/vue/2.6.11/vue.min.js" type="application/javascript"></script>
   <script src="//lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/element-ui/2.13.0/index.js" type="application/javascript"></script>
   <script src="//lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/vue-clipboard2/0.3.1/vue-clipboard.min.js" type="application/javascript"></script>
-  <script src="//lf3-cdn-tos.bytecdntp.com/cdn/expire-1-Y/jquery/3.6.0/jquery.min.js" type="application/javascript"></script>
+  <script src="//lf3-cdn-tos.bytecdntp.com/cdn/expire-1-Y/jquery/3.6.0/jquery.min.js" type="application/javascript"></script> -->
   <!-- 字节静态资源CDN -->
+  <!-- 自建静态资源CDN -->
+  <link href="//cdnjs.znnu.com/element-ui/2.13.0/theme-chalk/index.css" type="text/css" rel="stylesheet" />
+  <script src="//cdnjs.znnu.com/vue/2.6.11/vue.min.js" type="application/javascript"></script>
+  <script src="//cdnjs.znnu.com/element-ui/2.13.0/index.js" type="application/javascript"></script>
+  <script src="//cdnjs.znnu.com/vue-clipboard2/0.3.1/vue-clipboard.min.js" type="application/javascript"></script>
+  <script src="//cdnjs.znnu.com/jquery/3.6.0/jquery.min.js" type="application/javascript"></script>
+  <!-- 自建静态资源CDN -->
 </head>
 
 <body>
