--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
   
  <script>
-    const repo = 'https://github.com/kiko923/MyUrls-Workers'
+    const repo = 'https://github.com/yionchilau'
 
     let app = new Vue({
       el: "#app",
